// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection List Multi Selection List testing Multi Selection Snapshot Multi Selection List Container Snapshot 1`] = `
<div>
  <div
    class="HvSelectionList-root-166 HvFormElement-root-175"
    id="main"
  >
    <label
      class="HvSelectionList-label-167 HvLabel-root-176 HvTypography-root-179 HvTypography-highlightText-191"
      id="main-label"
    >
      Choose your favorite items
    </label>
    <ul
      aria-labelledby="main-label"
      aria-multiselectable="true"
      class="HvSelectionList-listbox-169 HvSelectionList-vertical-170 HvListContainer-root-201"
      id="main-listbox"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="HvListItem-root-202 HvListItem-gutters-203 HvListItem-condensed-207 HvListItem-interactive-204 HvFocus-root-213 HvFocus-focusDisabled-216"
        role="option"
        tabindex="-1"
        value="1"
      >
        ListItem 1
      </li>
      <li
        aria-selected="true"
        class="HvListItem-root-202 HvListItem-gutters-203 HvListItem-condensed-207 HvListItem-interactive-204 HvListItem-selected-205 HvFocus-root-213 HvFocus-selected-214 HvFocus-focusDisabled-216"
        role="option"
        tabindex="0"
        value="2"
      >
        ListItem 2
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root-202 HvListItem-gutters-203 HvListItem-condensed-207 HvListItem-interactive-204 HvFocus-root-213 HvFocus-focusDisabled-216"
        role="option"
        tabindex="-1"
        value="3"
      >
        ListItem 3
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root-202 HvListItem-gutters-203 HvListItem-condensed-207 HvListItem-interactive-204 HvFocus-root-213 HvFocus-focusDisabled-216"
        role="option"
        tabindex="-1"
        value="4"
      >
        ListItem 4
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root-202 HvListItem-gutters-203 HvListItem-condensed-207 HvListItem-interactive-204 HvFocus-root-213 HvFocus-focusDisabled-216"
        role="option"
        tabindex="-1"
        value="5"
      >
        ListItem 5
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root-202 HvListItem-gutters-203 HvListItem-condensed-207 HvListItem-interactive-204 HvFocus-root-213 HvFocus-focusDisabled-216"
        role="option"
        tabindex="-1"
        value="6"
      >
        ListItem 6
      </li>
    </ul>
  </div>
</div>
`;

exports[`Selection List Single Selection List testing Selection List Snapshot testing Selection List Container 1`] = `
<div>
  <div
    class="HvSelectionList-root-1 HvFormElement-root-10"
    id="main"
  >
    <label
      class="HvSelectionList-label-2 HvLabel-root-11 HvTypography-root-14 HvTypography-highlightText-26"
      id="main-label"
    >
      Choose your favorite items
    </label>
    <ul
      aria-labelledby="main-label"
      class="HvSelectionList-listbox-4 HvSelectionList-vertical-5 HvListContainer-root-36"
      id="main-listbox"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
        role="option"
        tabindex="-1"
        value="1"
      >
        ListItem 1
      </li>
      <li
        aria-selected="true"
        class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvListItem-selected-40 HvFocus-root-48 HvFocus-selected-49 HvFocus-focusDisabled-51"
        role="option"
        tabindex="0"
        value="2"
      >
        ListItem 2
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
        role="option"
        tabindex="-1"
        value="3"
      >
        ListItem 3
      </li>
    </ul>
  </div>
</div>
`;
